--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -28,6 +28,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script>(function() { window.XSRFToken = '{{ xsrf_token }}'; })();</script>
     <script src="/static/api.js"></script>
     {% block scripts %}{% end %}
