--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,67 +4,109 @@
 
 {% block body %}
   <div id="index">
-    <select class="form-control" v-on:change="changeSize">
-      <option value="">--</option>
-      <option
-        v-for="size in sizes"
-        v-bind:value="size.id"
-      >
-        ${ size.name }
-      </option>
-    </select>
-    <select class="form-control" v-on:change="changeFinish">
-      <option value="">--</option>
-      <option
-        v-for="finish in finishes"
-        v-bind:value="finish.id"
-      >
-        ${ finish.name }
-      </option>
-    </select>
-    <select class="form-control" v-on:change="changeType">
-      <option value="">--</option>
-      <option
-        v-for="type in types"
-        v-bind:value="type.id"
-      >
-        ${ type.name }
-      </option>
-    </select>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Type</th>
-          <th>Sizes</th>
-          <th>Finish</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr v-for="widget in widgets">
-          <td>${ widget.type.name }</td>
-          <td>
-            <select class="form-control">
-              <option
-                v-for="size in widget.sizes"
-                v-bind:value="size.id"
-              >
-                ${ size.name }
-              </option>
-            </select>
-          </td>
-          <td>
-            <select class="form-control">
-              <option
-                v-for="finish in widget.finishes"
-                v-bind:value="finish.id"
-              >
-                ${ finish.name }
-              </option>
-            </select>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="form-group">
+          <label>Size</label>
+          <select class="form-control" v-model="size" v-on:change="getWidgets()">
+            <option v-bind:value="undefined">--</option>
+            <option v-for="size in sizes" v-bind:value="size.id">
+              ${ size.name }
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Finish</label>
+          <select class="form-control" v-model="finish" v-on:change="getWidgets()">
+            <option v-bind:value="undefined">--</option>
+            <option v-for="finish in finishes" v-bind:value="finish.id">
+              ${ finish.name }
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Type</label>
+          <select class="form-control" v-model="type" v-on:change="getWidgets()">
+            <option v-bind:value="undefined">--</option>
+            <option v-for="type in types" v-bind:value="type.id">
+              ${ type.name }
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="col-sm-9">
+        <div class="well" v-if="order">
+          <h4>Order ${ order.id }</h4>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Type</th>
+                <th>Amount</th>
+                <th>Size</th>
+                <th>Finish</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="order_widget in order.widgets">
+                <td>${ order_widget.widget.type.name }</td>
+                <td>${ order_widget.amount }</td>
+                <td>${ order_widget.size.name }</td>
+                <td>${ order_widget.finish.name }</td>
+                <td>
+                  <button
+                    class="btn btn-default"
+                    v-on:click="deleteOrderWidget(order_widget.id)"
+                  >
+                    Delete
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <button class="btn btn-danger" v-on:click="deleteOrder()">Delete</button>
+        </div>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Type</th>
+              <th>Amount</th>
+              <th>Sizes</th>
+              <th>Finish</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="widget in widgets">
+              <td>${ widget.type.name }</td>
+              <td>${ widget.amount }</td>
+              <td>
+                <select class="form-control" v-model="selectedSizes[widget.id]">
+                  <option v-for="size in widget.sizes" v-bind:value="size.id">
+                    ${ size.name }
+                  </option>
+                </select>
+              </td>
+              <td>
+                <select class="form-control" v-model="selectedFinishes[widget.id]">
+                  <option v-for="finish in widget.finishes" v-bind:value="finish.id">
+                    ${ finish.name }
+                  </option>
+                </select>
+              </td>
+              <td>
+                <button
+                  class="btn btn-default"
+                  v-on:click="addOrderWidget(widget.id, selectedSizes[widget.id], selectedFinishes[widget.id], 1)"
+                >
+                  Add
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 {% end %}
 
